[package]
name = "tdl"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.28"
base64 = "0.22.1"
thiserror = "2.0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
metaflac = "0.2.8"
anyhow = "1.0"
rustyline = "17.0"
